GlobalExceptionHandler modified, Entity related issue fixes.